--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
-  "name": "Crystalis Randomizer (Latest)",
+  "name": "Crystalis Randomizer",
   "game_name": "Crystalis",
-  "package_version": "1.1.1",
+  "package_version": "1.1.2",
   "package_uid": "crystalis_codegorilla",
   "author": "CodeGorilla",
   "variants": {
