--- a/locations/east_cave_locations.json
+++ b/locations/east_cave_locations.json
@@ -47,6 +47,42 @@
 					}
 				],
 			},
+			{
+				"name": "East Cave",
+				"access_rules": [ "" ],
+				"sections": [
+					{
+						"name": "Key Item",
+						"item_count": 1
+					}
+				],
+				"map_locations": [
+					{
+						"map": "map_east_cave",
+						"x": 535,
+						"y": 60,
+						"force_invisibility_rules": ["flag_vm", "flag_vbangm"]
+					}
+				]
+			},
+			{
+				"name": "East Cave",
+				"access_rules": [ "" ],
+				"sections": [
+					{
+						"name": "Consumable Item",
+						"item_count": 1
+					}
+				],
+				"map_locations": [
+					{
+						"map": "map_east_cave",
+						"x": 335,
+						"y": 25,
+						"force_invisibility_rules": ["flag_eu", "flag_vm", "flag_vbangm"]
+					}
+				]
+			},
 		]
 	}
 ]
